--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500&family=Open+Sans:ital,wght@0,400;0,600;1,600&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
