--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500&family=Open+Sans:ital,wght@0,400;0,600;1,600&display=swap');
+@import 'github-markdown-css';
+@import url('https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.6.0/build/styles/default.min.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.markdown-body {
+    @apply bg-gray-50 dark:bg-gray-800 text-gray-700 dark:text-gray-200;
+}
+
+.markdown-body pre code, table {
+    @apply dark:text-gray-100 text-gray-200 bg-none;
+}
+
+.markdown-body p code {
+    @apply bg-green-500 dark:bg-green-500 text-gray-50;
+}
