--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 .markdown-body {
-    @apply bg-gray-50 dark:bg-gray-800 text-gray-700 dark:text-gray-200;
+    @apply bg-gray-50 dark:bg-gray-800 text-gray-700 dark:text-gray-200 transition-colors duration-500;
 }
 
 .markdown-body pre code, table {
