--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500&family=Open+Sans:ital,wght@0,400;0,600;1,600&display=swap');
 @import 'github-markdown-css';
-@import url('https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.6.0/build/styles/default.min.css');
+@import 'highlight.js/styles/atom-one-dark.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .markdown-body {
-    @apply bg-gray-50 dark:bg-gray-800 text-gray-700 dark:text-gray-200 transition-colors duration-500;
+    @apply text-gray-700 transition-colors duration-500 bg-gray-50 dark:bg-gray-800 dark:text-gray-200;
 }
 
 .markdown-body pre code, table {
-    @apply dark:text-gray-100 text-gray-200 bg-none;
+    @apply text-gray-200 dark:text-gray-100 bg-none;
 }
 
 .markdown-body p code {
