--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,77 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-Italic.woff') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-Medium.woff2') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-BoldItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-BoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-Regular.woff2') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-Light.woff2') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-MediumItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-MediumItalic.woff') format('woff');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-Bold.woff2') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/fonts/Ubuntu-LightItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Ubuntu-LightItalic.woff') format('woff');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
 .markdown-body {
     @apply text-gray-700 transition-colors duration-500 bg-gray-50 dark:bg-gray-800 dark:text-gray-200;
 }
@@ -15,4 +86,12 @@
 
 .markdown-body p code {
     @apply bg-green-500 dark:bg-green-500 text-gray-50;
+}
+
+.markdown-body h1,
+h2,
+h3,
+h4,
+h5 {
+    @apply font-semibold font-display;
 }
